@@ -90,8 +90,8 @@ config_setting::config_setting()
 	note_device_file("opnotedev"),
 	hash_map_device("ophashmapdev"),
 	daemon_log_file("oprofiled.log"),
-	kernel_filename(BUILD_DIR "vmlinux"),
-	map_filename(BUILD_DIR "System.map"),
+	kernel_filename(KVERSION "/build/vmlinux"),
+	map_filename(KVERSION "/build/System.map"),
 	kernel_only(0),
 	ignore_daemon_samples(0),
 	verbose(0),
