@@ -1,5 +1,13 @@
 2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
 
+	* Rules.make.in:
+	* gui/Makefile.in:
+	* gui/oprof_start_config.h:
+	* gui/oprof_start_config.cpp: remove kernel headers
+	  from userland !
+
+2002-01-11  John Levon  <moz@compsoc.man.ac.uk>
+
 	* configure.in: remove dead checks. comment out APIC check,
 	  hide grep output
 
